<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:paddingTop="16dp"
              android:orientation="vertical"
    tools:context="com.example.wenceslao.gestionempresa.ActividadContacto"
    tools:showIn="@layout/actividad_contacto">

    <TextView
        android:id="@+id/txtTitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/titulo2"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtInfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info2"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorPrimary"
        android:textSize="10sp"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTxtNombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_completo"
            android:inputType="textCapWords"
            android:maxLength="40"
            android:textSize="10sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTxtTlfContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono_contacto"
            android:inputType="phone"
            android:maxLength="9"
            android:textSize="10sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email_contacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_contacto"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:textSize="10sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTxtMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mensaje_contacto"
            android:inputType="textMultiLine"
            android:textSize="10sp" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/image_view_imagen"
            android:src="@drawable/ic_add_a_photo_black_24dp"
            android:layout_weight="9" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_photo_camera_black_24dp"
                android:id="@+id/image_button_camara"/>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_attach_file_black_24dp"
                android:id="@+id/image_button_galeria"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txtTitulo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/titulo3"
        android:textColor="@color/colorPrimary"
        android:textSize="9sp" />

    <CheckBox
        android:id="@+id/checkboxPolitica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/politica"
        android:textSize="9sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btnValid"
            android:layout_alignParentLeft="true"
            android:text="@string/enviar"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnValid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:elevation="0dp"
            android:text="@string/validar"
            android:textSize="12sp" />
    </RelativeLayout>

</LinearLayout>
