<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.wenceslao.gestionempresa.ActividadAddCita"
    tools:showIn="@layout/actividad_add_cita"
    android:weightSum="1">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp">

        <EditText
            android:id="@+id/nombre_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_completo"
            android:inputType="textCapWords"
            android:maxLength="40"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/email_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_contacto"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:maxLines="1"
            android:textSize="14sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/telefono_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono_contacto"
            android:inputType="phone"
            android:maxLength="9"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lista_servicios" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lista_peluqueros"/>

    <DatePicker
        android:id="@+id/fecha"
        android:layout_width="match_parent"
        android:calendarViewShown="false"
        android:layout_height="96dp"/>

    <TimePicker
        android:id="@+id/hora"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btnValidacion"
            android:layout_alignParentLeft="true"
            android:text="@string/añadir"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnValidacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:elevation="0dp"
            android:text="@string/validar"
            android:textSize="12sp" />
    </RelativeLayout>



</LinearLayout>
